--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -1,6 +1,3 @@
-    <dtable options="options" rows="data" class="material dt">
-      <column name="Name" width="300" flex-grow="2"></column>
-      <column name="Gender">
-        <strong>{{$row.name}}</strong>: {{$cell}}
-      </column>
-    </dtable>
+<div class="container">
+    <div id="grid1" ui-grid="options" ui-grid-pagination ui-grid-edit class="grid"></div>
+</div>   
