--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -29,6 +29,23 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="form-group">
+              <label id="status">{{status}}</label>
+              <select class="form-control" name="" id="selectStatus">
+                <option></option>
+                <option>NEW</option>
+                <option>PREPARED</option>
+                <option>UNPREPARED</option>
+                <option>PACKED</option>
+                <option>SHIPPED</option>
+                <option>DELIVERED</option>
+                <option>RETURNING</option>
+                <option>RETURNED</option>
+                <option>PAID</option>
+                <option>REFUNDED</option>
+                <option>CANCELED</option>
+              </select>
+            </div>
         </div>
         <div class="col-md-6">
             <div class="row">
@@ -48,7 +65,6 @@
                             <td>{{name}}</td>
                             <td>{{address}}</td>
                             <td id="qrcode">
-
                             </td>
                         </tr>
                     </tbody>
@@ -58,6 +74,7 @@
                 <table id="products" class="table table-bordered">
                     <tbody>
                         <tr ng-repeat="item in products">
+                            <td> <img src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
                             <td>{{ item.name }}</td>
                             <td>{{ item.model }}</td>
                             <td>{{ item.amount }}</td>
