--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -30,22 +30,34 @@
                 </tbody>
             </table>
             <div class="form-group">
-              <label id="status">{{status}}</label>
-              <select class="form-control" name="" id="selectStatus">
-                <option></option>
-                <option>NEW</option>
-                <option>PREPARED</option>
-                <option>UNPREPARED</option>
-                <option>PACKED</option>
-                <option>SHIPPED</option>
-                <option>DELIVERED</option>
-                <option>RETURNING</option>
-                <option>RETURNED</option>
-                <option>PAID</option>
-                <option>REFUNDED</option>
-                <option>CANCELED</option>
-              </select>
+                <label id="status">{{status}}</label>
+                <select class="form-control" name="" id="selectStatus">
+                    <option></option>
+                    <option>NEW</option>
+                    <option>PREPARED</option>
+                    <option>UNPREPARED</option>
+                    <option>PACKED</option>
+                    <option>SHIPPED</option>
+                    <option>DELIVERED</option>
+                    <option>RETURNING</option>
+                    <option>RETURNED</option>
+                    <option>PAID</option>
+                    <option>REFUNDED</option>
+                    <option>CANCELED</option>
+                </select>
+                <br>
+                <div class="card">
+                    <div class="card-body">
+                        <textarea placeholder="Nhập note tại đây" class="form-control" rows="3" id="noteEdit"></textarea>
+                        <div class="btn-group" style="margin-top: 10px; float: right" >
+                            <button id="saveNote" class="btn btn-success" style="margin-right: 10px">SAVE</button>
+                            <button id="cancelNote" class="btn btn-danger">CANCEL</button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
         </div>
         <div class="col-md-6">
             <div class="row">
@@ -74,7 +86,8 @@
                 <table id="products" class="table table-bordered">
                     <tbody>
                         <tr ng-repeat="item in products">
-                            <td> <img src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
+                            <td>
+                                <img src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
                             <td>{{ item.name }}</td>
                             <td>{{ item.model }}</td>
                             <td>{{ item.amount }}</td>
