--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -1,3 +1,31 @@
-<div class="container">
-    <div id="grid1" ui-grid="options" ui-grid-pagination ui-grid-edit class="grid"></div>
-</div>   
+<!-- <div class="container"> -->
+<div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav ui-grid-pagination ui-grid-edit
+    class="grid noprint"></div>
+
+<div class="print">
+
+    <ul ng-repeat="x in rowSelected" class="list-group">
+        <div class="col-sm-6">
+            <li class="list-group-item">
+                ID: {{x.id}} - {{x.own_Status}}
+            </li>
+            <li class="list-group-item">
+                VẬN ĐƠN: {{x.trackno}}
+            </li>
+            <li class="list-group-item">
+                {{x.nickname}}
+            </li>
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+    </ul>
+
+
+    <!-- <div class="col-sm-6"> -->
+
+    <!-- </div>     -->
+
+</div>
+
+<!-- </div> -->
