--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -33,23 +33,23 @@
                 <label id="status">{{status}}</label>
                 <select class="form-control" name="" id="selectStatus">
                     <option></option>
-                    <option>NEW</option>
-                    <option>PREPARED</option>
-                    <option>UNPREPARED</option>
-                    <option>PACKED</option>
-                    <option>SHIPPED</option>
-                    <option>DELIVERED</option>
-                    <option>RETURNING</option>
-                    <option>RETURNED</option>
-                    <option>PAID</option>
-                    <option>REFUNDED</option>
-                    <option>CANCELED</option>
+                    <option>Đơn mới</option>
+                    <option>Đủ hàng</option>
+                    <option>Thiếu hàng</option>
+                    <option>Đã đóng gói</option>
+                    <option>Đã gửi đi</option>
+                    <option>Khách đã nhận</option>
+                    <option>Đang hoàn hàng</option>
+                    <option>Đã hoàn về kho</option>
+                    <option>Đã thanh toán</option>
+                    <option>Đã hoàn tiền</option>
+                    <option>Đã Hủy</option>
                 </select>
                 <br>
                 <div class="card">
                     <div class="card-body">
                         <textarea placeholder="Nhập note tại đây" class="form-control" rows="3" id="noteEdit"></textarea>
-                        <div class="btn-group" style="margin-top: 10px; float: right" >
+                        <div class="btn-group" style="margin-top: 10px; float: right">
                             <button id="saveNote" class="btn btn-success" style="margin-right: 10px">SAVE</button>
                             <button id="cancelNote" class="btn btn-danger">CANCEL</button>
                         </div>
@@ -86,7 +86,7 @@
                 <table id="products" class="table table-bordered">
                     <tbody>
                         <tr ng-repeat="item in products">
-                            <td>
+                            <td style="background: #fff;">
                                 <img src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
                             <td>{{ item.name }}</td>
                             <td>{{ item.model }}</td>
