--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -1,7 +1,7 @@
 <!-- <div class="container"> -->
+<img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
 <div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-cellnav ui-grid-pagination ui-grid-edit
     class="grid noprint"></div>
-
 <div class="print">
 
     <ul ng-repeat="x in rowSelected" class="list-group">
