--- a/app-options-page/components/scanOrder/scanView.html
+++ b/app-options-page/components/scanOrder/scanView.html
@@ -1,3 +1,4 @@
 <div class="container">
-        <div id="reader" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div>
+        <audio id="play-beep" src="../../../lib/audio/beep.wav"></audio>
+        <div id="reader" autoplay="" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div>
 </div>
