--- a/app-options-page/components/scanOrder/scanView.html
+++ b/app-options-page/components/scanOrder/scanView.html
@@ -1,4 +1,5 @@
 <div class="container">
         <audio id="play-beep" src="../../../lib/audio/beep.wav"></audio>
-        <div id="reader" autoplay="" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div>
+        <video id="preview"></video>
+        <!-- <div id="reader" autoplay="" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div> -->
 </div>
