--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -29,7 +29,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="form-group">
+            <div class="form-group noprint">
                 <label id="status">{{status}}</label>
                 <select class="form-control" name="" id="selectStatus">
                     <option></option>
@@ -82,7 +82,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="row" style="margin-top: 8px">
+            <div class="row noprint" style="margin-top: 8px">
                 <table id="products" class="table table-bordered">
                     <tbody>
                         <tr ng-repeat="item in products">
