--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -81,7 +81,7 @@
                         </tr>
                         <tr>
                             <td>{{orderId}}</td>
-                            <td>{{urlId}}</td>
+                            <td> <a target="_blank" href="https://banhang.shopee.vn/portal/sale/{{urlId}}">{{urlId}}</a></td>
                             <td>{{pay}} COD</td>
                         </tr>
                         <tr>
