--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -75,9 +75,9 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr>
-                            <td>{{trackingNo}}</td>
+                            <td>{{trackingNo}} - {{carrier}}</td>
                             <td>+{{phone}}</td>
-                            <td></td>
+                            <td>{{date}}</td>
                         </tr>
                         <tr>
                             <td>{{orderId}}</td>
