--- a/css/custom.css
+++ b/css/custom.css
@@ -37,11 +37,15 @@ body {
   }
 
   @media print {
+    a[href]:after {
+      content: none !important;
+    }
     .noprint {
       display: none
     }
     .print {
       display: block;
+      
     }
   }
 
